fix circle ci deployment
Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -21,3 +21,9 @@ test:
 
   override:
     - cd $PROJECT_PATH && go test ./...
+
+deployment:
+  production:
+    branch: master
+    commands:
+      - ./deploy.sh
