add https://www.sugilanon.com to alloworigins list
Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -22,8 +22,8 @@ test:
   override:
     - cd $PROJECT_PATH && go test ./...
 
-deployment:
-  production:
-    branch: master
-    commands:
-      - ./deploy.sh
+# deployment:
+#   production:
+#     branch: master
+#     commands:
+#       - ./deploy.sh
